modified small issues and hamburger menu

--- a/products/templates/base.html
+++ b/products/templates/base.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="{% static 'styles/menu.css' %}">
     <link rel="stylesheet" href="{% static 'styles/blog.css' %}">
     <link rel="stylesheet" href="{% static 'styles/add-meal.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/review.css' %}">
     
 </head>
 <body class="loading" style="background-image: url('{% static 'images/hero-bg.png' %}');">
