--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -97,10 +97,12 @@ body.loading {
         flex-direction: column;
         background-color: #2c3e50;
         position: absolute;
-        top: 60px;
-        right: 0;
-        width: 100%;
+        top: 92px;
+        left: 0; /* Align the menu to the left */
+        width: 70%; /* Make the menu 70% of the screen width */
         z-index: 1000;
+        border-radius: 0 15px 15px 0; /* Optional: Rounded right side for a better look */
+  
     }
 
     .navbar-menu.active {
@@ -111,6 +113,7 @@ body.loading {
         text-align: center;
         padding: 10px 0;
         border-top: 1px solid #1abc9c;
+        
     }
 
     .navbar-menu a {
@@ -121,17 +124,22 @@ body.loading {
     }
 
     .hamburger-menu {
+        
+        position: absolute;
+        left: 120px; /* Position the hamburger menu on the left */
+        top: 40px; /* Ensure it's near the top */
         display: flex;
         flex-direction: column;
         cursor: pointer;
         justify-content: space-between;
         height: 24px;
+
     }
 
     .hamburger-menu .bar {
         width: 30px;
         height: 3px;
-        background-color: white;
+        background-color:  #2c3e50;
         transition: all 0.3s ease;
     }
 
