--- a/static/styles/blog.css
+++ b/static/styles/blog.css
@@ -84,17 +84,18 @@
 
     .blog-form-group {
         margin-bottom: 20px;
-      
+        margin: 20px;
     }
 
     .blog-form-group label {
         font-size: 16px;
         color: #2c3e50;
-        margin-bottom: 5px;
+        margin-bottom: 20px;
         display: block;
     }
     .blog-form-group input{
         background-color: aquamarine;
+        margin-bottom: 20px;
     }
 
     .form-group .form-control {
@@ -102,7 +103,7 @@
         padding: 10px;
         font-size: 16px;
         border-radius: 5px;
-        
+        margin-bottom: 20px;
         border: 2px solid #ddd;
         box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     }
